Ported all Areeb data to new template

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,112 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@unpublished{fritz2024hidden,
+      title={Hidden Markov Models and the Bayes Filter in Categorical Probability}, 
+      author={Tobias Fritz and Andreas Klingler and Drew McNeely and Areeb Shah-Mohammed and Yuwen Wang},
+      year={2024},
+      month={January},
+      eprint={2401.14669},
+      archivePrefix={arXiv},
+      primaryClass={math.ST},
+      annote={Preprint},
+      abstract={We use Markov categories to develop generalizations of the theory of Markov chains and hidden Markov models in an abstract setting. This comprises characterizations of hidden Markov models in terms of local and global conditional independences as well as existing algorithms for Bayesian filtering and smoothing applicable in all Markov categories with conditionals. We show that these algorithms specialize to existing ones such as the Kalman filter, forward-backward algorithm, and the Rauch-Tung-Striebel smoother when instantiated in appropriate Markov categories. Under slightly stronger assumptions, we also prove that the sequence of outputs of the Bayes filter is itself a Markov chain with a concrete formula for its transition maps.
+There are two main features of this categorical framework. The first is its generality, as it can be used in any Markov category with conditionals. In particular, it provides a systematic unified account of hidden Markov models and algorithms for filtering and smoothing in discrete probability, Gaussian probability, measure-theoretic probability, possibilistic nondeterminism and others at the same time. The second feature is the intuitive visual representation of information flow in these algorithms in terms of string diagrams.},
+    arxiv={2401.14669},
+    preview={hmmcausaldiag.png},
+    selected={true}
 }
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@techreport{areeb2021HCP,
+      title={Homology, Cohomology and Products},
+      author={Shah Mohammed, Areeb},
+      institution={Universit{\"a}t Regensburg},
+      note={Prepared for a master's degree seminar on Stable Homotopy Theory},
+      year={2021},
+      annote={Expository},
+      abstract={These are notes for a student seminar talk I did during my master degree. Purely expository, but I'm leaving them here in case they are of interest to anyone. Of course, all errors are due to me and me alone ;) As for the contents, the notes start by discussing the homology and cohomology theories induced by spectra. It is sketched how all (co)homology theories are conversely presented by spectra. The rest of the notes discus the various products (exterior, slant, cup, and cap) induced on these theories.},
+      pdf={HCaP.pdf},
+      preview={HCaPPreview.png},
 }
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@techreport{areeb2021PEaAF,
+      title={Projective Embeddings and Abelian Functions},
+      author={Shah Mohammed, Areeb},
+      institution={Universit{\"a}t Regensburg},
+      note={Prepared for a master's degree seminar on Theta Functions, Complex Abelian Varieties and Moduli Spaces.},
+      year={2021},
+      annote={Expository},
+      abstract={These are notes for a student seminar talk I did during my master degree. Purely expository, but I'm leaving them here in case they are of interest to anyone. Of course, all errors are due to me and me alone ;) As for the contents, the notes start by discussing a standard technique for constructing projective embeddings of a complex torus (with a recollection of what that means). The case of Polarized Abelian Varieties is then specialized to. An actual projective embedding is then constructed, and the notes move on to describe a characterization of the ring of abelian functions. The final section is an identification of the Picard group of an abelian variety using Appell-Humbert data.},
+      pdf={PEaAF.pdf},
+      preview={PEaAFPreview.png},
 }
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@techreport{areeb2021RSPE,
+      title={Projective Embeddings of Compact Riemann Surfaces},
+      author={Shah Mohammed, Areeb},
+      institution={Universit{\"a}t Regensburg},
+      note={Prepared for a master's degree course on Sheaf Cohomology},
+      year={2021},
+      annote={Expository},
+      abstract={This is a short note for a course I had during my master degree. Purely expository, but I'm leaving them here in case they are of interest to anyone. Of course, all errors are due to me and me alone ;) As for the contents, the notes start by discussing a characterization of projective embeddings. Embeddings for compact Riemann surfaces are then demonstrated by the identification of very ample line bundles.},
+      pdf={RSPE.pdf},
+      preview={RSPEPreview.png},
 }
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@techreport{areeb2022MBL,
+      title={The Mitchell-B{\'e}nabou Language},
+      author={Shah Mohammed, Areeb},
+      institution={Universit{\"a}t Regensburg},
+      note={Prepared for a master's degree seminar on Topoi, Logic and Forcing},
+      year={2022},
+      month={June},
+      annote={Expository},
+      abstract={These are notes for a student seminar talk I did during my master degree. Purely expository, but I'm leaving them here in case they are of interest to anyone. Of course, all errors are due to me and me alone ;) As for the contents, the notes start by recalling what it means to interpret first order logic in a Heyting category. They then discuss how the tautological structure of a topos extends this to two variants of the Mitchell-B{\'e}nabou language. It ends by presenting a Kripke-style semantics for the Mitchell-B{\'e}nabou language.},
+      pdf={MBL.pdf},
+      preview={MBLPreview2.png},
 }
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@techreport{areeb2022AQHomR,
+      title={Resolutions, Homology and Cohomology},
+      author={Shah Mohammed, Areeb},
+      institution={Universit{\"a}t Regensburg},
+      note={Prepared for a master's degree seminar on Model Categories},
+      year={2022},
+      month={July},
+      annote={Expository},
+      abstract={This is a report for a student seminar talk I did during my master degree. Purely expository, but I'm leaving it here in case it's of interest to anyone. Of course, all errors are due to me and me alone ;) It's one of the shorter ones, as this seminar had a limit on how long the reports could be :P. It starts with a discussion of Quillen homology, reviews a few examples, and goes on to discuss resolution model categories.},
+      pdf={AQHomR.pdf},
+      preview={AQHomRPreview.png},
 }
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@techreport{areeb2023Equiv,
+      title={Introduction to Equivalences of Categories},
+      author={Shah Mohammed, Areeb},
+      institution={Leopold-Franzens-Universit{\"a}t Innsbruck},
+      note={Prepared for a student seminar on Noncommutative Geometry},
+      year={2023},
+      month={March},
+      annote={Expository},
+      abstract={These are notes for a student seminar talk I did as prerequisites for noncommutative geometry. Purely expository, but I'm leaving them here in case they are of interest to anyone. Of course, all errors are due to me and me alone ;) As for the contents, it doesn't really have very much to do with noncommutative geometry in particular. It's mostly an introduction to anti-equivalences, since most noncommutative geometrical objects are anti-equivalent to corresponding noncommutative algebraic objects.},
+      pdf={equiv.pdf},
+      slides={equivSlides.pdf},
+      preview={EquivPreview.png},
 }
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@techreport{areeb2019reu,
+      title={The Freyd-Heller group and the failure of Brown representability}, 
+      author={Shah Mohammed, Areeb},
+      publisher={The University of Chicago Mathematics REU},
+      institution={The University of Chicago Mathematics REU},
+      note={Prepared for the University of Chicago Mathematics REU},
+      year={2019},
+      month={},
+      annote={Expository},
+      howpublished={The University of Chicago Mathematics REU},
+      abstract={It is a classical result due to Edgar Brown that any set valued contravariant functor on the homotopy category of connected based topological spaces taking coproducts to products and weak pushouts to weak pullbacks is representable.
+This is however, false when we drop the assumption that our spaces and maps are based, or if we drop the assumption that the spaces under consideration are connected. We describe a construction, often called the “Freyd-Heller” group, that results in a counterexample in both cases.},
+      html={http://math.uchicago.edu/%7emay/REU2019/REUPapers/Areeb.pdf},
+      preview={REUPreview.png},
 }
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@mastersthesis{asm2022masterarbeit,
+  author  = "Shah Mohammed, Areeb",
+  title   = "On a characterization of Higher Semiadditivity",
+  school  = "Universit{\"a}t Regensburg",
+  year    = "2022",
+  month   = "November",
+  annote = {Masterarbeit},
+  abstract={Michael Hopkins and Jacob Lurie introduce for m at most n, a notion of m-semiadditivity. This generalizes the classical notion of a semiadditive (infinity) category. Intuitively, m-semiadditive infinity categories are those in which limits and colimits of diagrams indexed by m-finite spaces (that is, m-finite infinity groupoids) are canonically equivalent. Yonatan Harpaz proves a universal property of the infinity category of spans of n-finite spaces with m-truncated wrong way maps. This is used to establish an equivalent characterization of m-semiadditivity in terms of a well behaved, essentially unique action of this category of spans. This has the advantage of not only providing a more succinct method of detecting m-semiadditivity, but also providing a versatile structure to work with m-semiadditive infinity categories. In this thesis, we survey this sequence of results.},
+  note    = "Survey article: all results are generally already known. Contains a few alternate proofs in an attempt to work as much as possible with quasicategories as opposed to simplicial categories or complete Segal spaces.",
+  preview={Masterarbeit_preview.png},
+  pdf={Masterarbeit_mit_Unterschrift.pdf}
 }
