New CV and posts about new preprint

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -128,7 +128,7 @@ This is however, false when we drop the assumption that our spaces and maps are 
   year    = "2022",
   month   = "November",
   annote = {Masterarbeit},
-  abstract={Michael Hopkins and Jacob Lurie introduce for m at most n, a notion of m-semiadditivity. This generalizes the classical notion of a semiadditive (infinity) category. Intuitively, m-semiadditive infinity categories are those in which limits and colimits of diagrams indexed by m-finite spaces (that is, m-finite infinity groupoids) are canonically equivalent. Yonatan Harpaz proves a universal property of the infinity category of spans of n-finite spaces with m-truncated wrong way maps. This is used to establish an equivalent characterization of m-semiadditivity in terms of a well behaved, essentially unique action of this category of spans. This has the advantage of not only providing a more succinct method of detecting m-semiadditivity, but also providing a versatile structure to work with m-semiadditive infinity categories. In this thesis, we survey this sequence of results.},
+  abstract={Michael Hopkins and Jacob Lurie have introduced for $$m\ge -2$$, a notion of m-semiadditivity. This generalizes the classical notion of a semiadditive (infinity) category. Intuitively, m-semiadditive infinity categories are those in which limits and colimits of diagrams indexed by m-finite spaces (that is, m-finite infinity groupoids) are canonically equivalent. Yonatan Harpaz proves a universal property of the infinity category of spans of n-finite spaces with m-truncated wrong way maps. This is used to establish an equivalent characterization of m-semiadditivity in terms of a well behaved, essentially unique action of this category of spans. This approach has the advantage of not only providing a more succinct method of detecting m-semiadditivity, but also providing a versatile structure to work with m-semiadditive infinity categories. In this thesis, we survey this sequence of results.},
   note    = "Survey article: all results are generally already known. Contains a few alternate proofs in an attempt to work as much as possible with quasicategories as opposed to simplicial categories or complete Segal spaces.",
   preview={Masterarbeit_preview.png},
   pdf={Masterarbeit_mit_Unterschrift.pdf}
