CT25 talk, HMM acceptance, and partialization preprint; with new CV

--- a/_bibliography/external.bib
+++ b/_bibliography/external.bib
@@ -1,3 +1,20 @@
+@unpublished{fritz2024hidden,
+      title={Hidden Markov Models and the Bayes Filter in Categorical Probability}, 
+      author={Tobias Fritz and Andreas Klingler and Drew McNeely and Areeb Shah-Mohammed and Yuwen Wang},
+      year={2024},
+      month={January},
+      eprint={2401.14669},
+      archivePrefix={arXiv},
+      primaryClass={math.ST},
+      annote={Preprint},
+      doi={10.48550/arXiv.2401.14669},
+      abstract={We use Markov categories to develop generalizations of the theory of Markov chains and hidden Markov models in an abstract setting. This comprises characterizations of hidden Markov models in terms of local and global conditional independences as well as existing algorithms for Bayesian filtering and smoothing applicable in all Markov categories with conditionals. We show that these algorithms specialize to existing ones such as the Kalman filter, forward-backward algorithm, and the Rauch-Tung-Striebel smoother when instantiated in appropriate Markov categories. Under slightly stronger assumptions, we also prove that the sequence of outputs of the Bayes filter is itself a Markov chain with a concrete formula for its transition maps.
+There are two main features of this categorical framework. The first is its generality, as it can be used in any Markov category with conditionals. In particular, it provides a systematic unified account of hidden Markov models and algorithms for filtering and smoothing in discrete probability, Gaussian probability, measure-theoretic probability, possibilistic nondeterminism and others at the same time. The second feature is the intuitive visual representation of information flow in these algorithms in terms of string diagrams.},
+    arxiv={2401.14669},
+    preview={hmmcausaldiag.png},
+    code={https://github.com/blackhole89/markovcats/tree/master},
+    selected={false}
+}
 @book{deshpande2021brownwaternavy,
   title    = {The Rise and Fall of a Brown Water Navy: Sarkhel Kanhoji Angre and Maratha Seapower on the Arabian Sea in the 17th and 18th Centuries},
   author   = {Deshpande, Anirudh and Mujawar, Muphid},
