--- a/_posts/2025-06-07-act-talk.md
+++ b/_posts/2025-06-07-act-talk.md
@@ -2,7 +2,7 @@
 layout: post
 title: Conference and Talk
 date: 2025-06-04 14:30:00
-description: Applied Category Theory 2025 
+description: Applied Category Theory 2025
 tags: math talk conference
 categories: talks
 giscus_comments: false
@@ -21,4 +21,4 @@ I will be heading to the [International Category Theory](https://conference.math
 
 ---
 
-[^1]: I'm hoping the preprint will be out in not *too* much time.
+[^1]: I'm hoping the preprint will be out in not _too_ much time.
