Added new CV with LLN lmcs acceptance

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,6 +53,7 @@
   archiveprefix = {arXiv},
   keywords = {Computer Science - Logic in Computer Science,Mathematics - Category Theory,Mathematics - Probability,Mathematics - Statistics Theory,Statistics - Statistics Theory},
   annote={Preprint},
+  note={Accepted by Logical Methods in Computer Science},
   arxiv={2503.21576},
   preview={Synthetic Glivenko-Cantelli.png},
   selected={true}
